construção do banco de dados realizada com sucesso

--- a/src/pages/create_account/ca.html
+++ b/src/pages/create_account/ca.html
@@ -50,9 +50,11 @@
     </div>
 
     <!-- Footer -->
+
     <footer>
-        <p>Powered by IT | Developed By Gustavo Godoi</p>
+        <p>© 2024 Ancore - Todos os direitos reservados - Developed by Gustavo Godoi</p>
     </footer>
+
     <script src="ca.js"></script>
 </body>
 
