--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -32,58 +32,55 @@
         <!-- Botão de Cadastro -->
         <button id="cadastrar-btn">Criar Conta</button>
 
-        <script>
-            const { ipcRenderer } = require('electron');
-
-            // Navegar para a página de cadastro
-            document.getElementById('cadastrar-btn').addEventListener('click', () => {
-                ipcRenderer.send('navigate-to-create-account');
-            });
-
-            // Enviar dados de login ao processo principal
-            document.getElementById('login-form').addEventListener('submit', (event) => {
-                event.preventDefault(); // Previne o envio padrão do formulário
-
-                // Coleta as informações do formulário
-                const usuario = document.getElementById('usuario').value;
-                const senha = document.getElementById('senha').value;
-
-                // Envia as credenciais para o processo principal via ipcRenderer
-                ipcRenderer.send('login', { username: usuario, password: senha });
-            });
-
-            // Recebe a resposta de login e exibe um alerta
-            ipcRenderer.on('login-response', (event, response) => {
-                if (response.success) {
-                    alert(response.message); // Login bem-sucedido
-                    // Redireciona para a página principal ou outra ação desejada
-                    window.location.href = 'src/pages/home/index.html'; // Exemplo de navegação
-                } else {
-                    alert(response.message); // Erro de login
-                }
-            });
-        </script>
-
         <!-- Seletor de Cor Terciária -->
         <div class="color-picker">
             <label for="color">Escolha o seu tema:</label> 
-            <input type="color" id="color" name="color" value="##FF7F00">
+            <input type="color" id="color" name="color" value="#FF7F00">
         </div>
-
     </div>
 
-    <!-- Script para mudar a cor terciária -->
+    <!-- Scripts -->
     <script>
+        const { ipcRenderer } = require('electron');
+
+        // Navegar para a página de cadastro
+        document.getElementById('cadastrar-btn').addEventListener('click', () => {
+            ipcRenderer.send('navigate-to-create-account');
+        });
+
+        // Enviar dados de login ao processo principal
+        document.getElementById('login-form').addEventListener('submit', (event) => {
+            event.preventDefault(); // Previne o envio padrão do formulário
+
+            // Coleta as informações do formulário
+            const usuario = document.getElementById('usuario').value;
+            const senha = document.getElementById('senha').value;
+
+            // Envia as credenciais para o processo principal via ipcRenderer
+            ipcRenderer.send('login', { username: usuario, password: senha });
+        });
+
+        // Recebe a resposta de login e exibe um alerta
+        ipcRenderer.on('login-response', (event, response) => {
+            if (response.success) {
+                alert(response.message); // Login bem-sucedido
+                // Redireciona para a página principal ou outra ação desejada
+                window.location.href = 'src/pages/home/index.html'; // Exemplo de navegação
+            } else {
+                alert(response.message); // Erro de login
+            }
+        });
+
+        // Seletor de Cor Terciária
         const colorPicker = document.getElementById("color");
         colorPicker.addEventListener("input", function() {
             document.documentElement.style.setProperty('--cor-terciaria', colorPicker.value);
         });
     </script>
 
-    <!-- Footer -->
     <footer>
-        <p>Powered by IT | Developed By Gustavo Godoi</p>
-    </footer> 
+        <p>© 2024 Ancore - Todos os direitos reservados - Developed by Gustavo Godoi</p>
+    </footer>
 
 </body>
 </html>
