construção do banco de dados realizada com sucesso

--- a/src/pages/create_account/ca.html
+++ b/src/pages/create_account/ca.html
@@ -37,7 +37,7 @@
         </form>
 
         <!-- Link para Login -->
-        <button id="login-btn" onclick="window.location.href='index.html'">Já tem uma conta? Faça Login</button>
+        <button id="voltar-btn" onclick="window.location.href='../home/index.html'">Já tem uma conta? Faça Login</button> <!-- Caminho relativo para index.html na pasta home -->
 
         <script>
             const { ipcRenderer } = require('electron');
