Reestruturação de pasta, exclusão de banco de dados e recomeço do projeto

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,7 @@
         <p>Seu software de produtividade.</p>
 
         <!-- Formulário de Login -->
-        <form id="login-form" class="login-form" action="#" method="POST">
+        <form id="login-form" class="login-form">
             <label for="usuario">Usuário:</label>
             <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuário" required>
 
@@ -32,55 +33,23 @@
         <!-- Botão de Cadastro -->
         <button id="cadastrar-btn">Criar Conta</button>
 
+        <!--Script importado do Functions.js para enviar para a pagina de cadastro-->
+        <script type="module">
+            import { redirecionarParaCadastro } from "../../../scripts/functions.js";
+        
+            // Adiciona o evento ao botão
+            document.getElementById("cadastrar-btn").addEventListener("click", redirecionarParaCadastro);
+        </script>
+
         <!-- Seletor de Cor Terciária -->
-        <div class="color-picker">
-            <label for="color">Escolha o seu tema:</label> 
-            <input type="color" id="color" name="color" value="#FF7F00">
-        </div>
+
     </div>
 
-    <!-- Scripts -->
-    <script>
-        const { ipcRenderer } = require('electron');
-
-        // Navegar para a página de cadastro
-        document.getElementById('cadastrar-btn').addEventListener('click', () => {
-            ipcRenderer.send('navigate-to-create-account');
-        });
-
-        // Enviar dados de login ao processo principal
-        document.getElementById('login-form').addEventListener('submit', (event) => {
-            event.preventDefault(); // Previne o envio padrão do formulário
-
-            // Coleta as informações do formulário
-            const usuario = document.getElementById('usuario').value;
-            const senha = document.getElementById('senha').value;
-
-            // Envia as credenciais para o processo principal via ipcRenderer
-            ipcRenderer.send('login', { username: usuario, password: senha });
-        });
-
-        // Recebe a resposta de login e exibe um alerta
-        ipcRenderer.on('login-response', (event, response) => {
-            if (response.success) {
-                alert(response.message); // Login bem-sucedido
-                // Redireciona para a página principal ou outra ação desejada
-                window.location.href = 'src/pages/home/index.html'; // Exemplo de navegação
-            } else {
-                alert(response.message); // Erro de login
-            }
-        });
-
-        // Seletor de Cor Terciária
-        const colorPicker = document.getElementById("color");
-        colorPicker.addEventListener("input", function() {
-            document.documentElement.style.setProperty('--cor-terciaria', colorPicker.value);
-        });
-    </script>
 
     <footer>
         <p>© 2024 Ancore - Todos os direitos reservados - Developed by Gustavo Godoi</p>
     </footer>
 
 </body>
+
 </html>
